--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Zombie Hunter</title>
+
+    <!-- PWA / iOS Standalone Mode -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Zombie Hunter" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="#1a1a2e" />
+    <meta name="description" content="Survivez aux hordes de zombies dans ce jeu d'action intense!" />
+
+    <!-- Manifest pour PWA -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Icônes pour iOS -->
+    <link rel="apple-touch-icon" href="/assets/icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/icon-32.png" />
     <style>
       * {
         margin: 0;
