--- a/index.html
+++ b/index.html
@@ -25,18 +25,42 @@
         padding: 0;
         box-sizing: border-box;
       }
+      html, body {
+        width: 100%;
+        height: 100%;
+        /* Fond noir pour les bandes latérales */
+        background-color: #000000;
+        overflow: hidden;
+        /* Empêcher le scroll et le bounce sur iOS */
+        position: fixed;
+        touch-action: none;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        user-select: none;
+      }
       body {
-        background-color: #1a1a2e;
         display: flex;
         justify-content: center;
         align-items: center;
+        /* Utiliser toute la hauteur disponible incluant les safe areas */
         min-height: 100vh;
-        overflow: hidden;
+        min-height: -webkit-fill-available;
+        /* Support safe area pour iPhone avec notch */
+        padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
       }
       #game-container {
         display: flex;
         justify-content: center;
         align-items: center;
+        /* Le jeu prend toute la hauteur disponible */
+        height: 100%;
+        max-height: 100vh;
+        max-height: -webkit-fill-available;
+      }
+      /* Forcer le canvas à prendre toute la hauteur */
+      #game-container canvas {
+        max-height: 100vh !important;
+        max-height: -webkit-fill-available !important;
       }
     </style>
   </head>
