--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Zombie Hunter" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="theme-color" content="#1a1a2e" />
+    <meta name="theme-color" content="#000000" />
     <meta name="description" content="Survivez aux hordes de zombies dans ce jeu d'action intense!" />
 
     <!-- Manifest pour PWA -->
@@ -30,21 +30,14 @@
         height: 100%;
         background-color: #000000;
         overflow: hidden;
-        position: fixed;
         touch-action: none;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         user-select: none;
       }
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
       #game-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
